--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -404,6 +404,7 @@ SET ( PBRT_CORE_SOURCE
   src/core/stats.cpp
   src/core/texture.cpp
   src/core/transform.cpp
+  src/core/portal.cpp
   )
 
 SET ( PBRT_CORE_HEADERS
@@ -448,6 +449,7 @@ SET ( PBRT_CORE_HEADERS
   src/core/stringprint.h
   src/core/texture.h
   src/core/transform.h
+  src/core/portal.h
   )
 
 FILE ( GLOB PBRT_SOURCE
