--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -405,7 +405,7 @@ SET ( PBRT_CORE_SOURCE
   src/core/texture.cpp
   src/core/transform.cpp
   src/core/portal.cpp
-  )
+        )
 
 SET ( PBRT_CORE_HEADERS
   src/core/api.h
@@ -449,8 +449,7 @@ SET ( PBRT_CORE_HEADERS
   src/core/stringprint.h
   src/core/texture.h
   src/core/transform.h
-  src/core/portal.h
-  )
+  src/core/portal.h)
 
 FILE ( GLOB PBRT_SOURCE
   src/ext/*
@@ -463,8 +462,7 @@ FILE ( GLOB PBRT_SOURCE
   src/samplers/*
   src/shapes/*
   src/textures/*
-  src/media/*
-  )
+  src/media/*)
 
 INCLUDE_DIRECTORIES ( src )
 INCLUDE_DIRECTORIES ( src/core )
