--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -404,8 +404,7 @@ SET ( PBRT_CORE_SOURCE
   src/core/stats.cpp
   src/core/texture.cpp
   src/core/transform.cpp
-  src/core/portal.cpp
-        )
+        src/portals/aaportal.cpp)
 
 SET ( PBRT_CORE_HEADERS
   src/core/api.h
@@ -449,7 +448,7 @@ SET ( PBRT_CORE_HEADERS
   src/core/stringprint.h
   src/core/texture.h
   src/core/transform.h
-  src/core/portal.h)
+        src/portals/aaportal.h)
 
 FILE ( GLOB PBRT_SOURCE
   src/ext/*
@@ -462,7 +461,8 @@ FILE ( GLOB PBRT_SOURCE
   src/samplers/*
   src/shapes/*
   src/textures/*
-  src/media/*)
+  src/media/*
+  src/portals/*)
 
 INCLUDE_DIRECTORIES ( src )
 INCLUDE_DIRECTORIES ( src/core )
