--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -404,7 +404,8 @@ SET ( PBRT_CORE_SOURCE
   src/core/stats.cpp
   src/core/texture.cpp
   src/core/transform.cpp
-        src/portals/aaportal.cpp)
+  src/portals/aaportal.cpp
+  src/core/aa_plane.cpp)
 
 SET ( PBRT_CORE_HEADERS
   src/core/api.h
@@ -448,7 +449,8 @@ SET ( PBRT_CORE_HEADERS
   src/core/stringprint.h
   src/core/texture.h
   src/core/transform.h
-        src/portals/aaportal.h)
+  src/portals/aaportal.h
+  src/core/aa_plane.h)
 
 FILE ( GLOB PBRT_SOURCE
   src/ext/*
